# CXF2GIS

./: README.md  pyproject.toml
src/cxf2gis/: cli.py  core.py  models.py
src/cxf2gis/comuni/: base.py  providers.py
src/cxf2gis/exporters/: base.py  sql_common.py
src/cxf2gis/exporters/geopackage/: base.py
src/cxf2gis/exporters/postgis/: base.py
src/cxf2gis/exporters/projtools/: prgcloud.py
