[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "CFX2GIS"
version = "0.0.1"
authors = [
  { name="Manuele Pesenti", email="manuele@inventati.org" },
]
description = "Python library to parse Italian cadastral CXF files into GIS and spatial databases."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/manuelep/CXF2GIS"
Issues = "https://github.com/manuelep/CXF2GIS/issues"

[project.scripts]
cxf2gis = "cxf2gis.cli:main"